--- a/time_zones/pubspec.yaml
+++ b/time_zones/pubspec.yaml
@@ -1,10 +1,10 @@
 name: time_zones
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.4 <4.0.0'
+  sdk: ">=3.2.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,3 +17,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+fonts:
+  - family: ProtestRiot
+    fonts:
+      - asset: fonts/ProtestRiot-Regular.ttf
+  - family: Trajan Pro
+    fonts:
+      - asset: fonts/TrajanPro.ttf
